# smartmedibox

./: BUILD.gn  readme.md  supporter.R.SLDPRT  supporter.R.STL  supporter.SLDPRT  supporter.STL
smartmedicalbox/: BUILD.gn  header.h  http.c  http_client.h  i2c.c  mp3.c  mp3.h  mqtt.c  spi_flash.h  spiflash.c  wifi.c
